helm/dev/ingress/ingress-rules-besu.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: besu-ingress-routes
  namespace: besu
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /rpc(/|$)(.*)
        backend:
          serviceName: besu-node-tx-1
          servicePort: 8545
      - path: /graphql(/|$)(.*)
        backend:
          serviceName: besu-node-tx-1
          servicePort: 8547          
      - path: /(.*)
        backend:
          serviceName: besu-monitoring-monitoring-grafana
          servicePort: 3000
